// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownButton renders correctly 1`] = `
<div
  className="sc-bdVaJa jKopLr"
>
  <div
    className="sc-kEYyzF hUuPit"
  >
    <span>
      <button
        className="sc-eNQAEJ gDidKo sc-VigVT hegYug sc-htoDjs fAvRR"
        primary={true}
        theme={
          Object {
            "breakpoints": Array [
              32,
              48,
              64,
              80,
            ],
            "colors": Object {
              "danger": Object {
                "dark": "#661B1B",
                "light": "#FFECEC",
                "main": "#FF4444",
                "semilight": "#FFA1A1",
              },
              "gray": Object {
                "dark": "#9f9f9f",
                "light": "#f4f4f4",
                "main": "#c6c8c9",
              },
              "info": Object {
                "dark": "#0D3C58",
                "light": "#E9F4FB",
                "main": "#2297DE",
                "semilight": "#90CBEE",
              },
              "primary": Object {
                "dark": "#1E87C7",
                "light": "#5FB3E7",
                "main": "#2297DE",
              },
              "quartenary": Object {
                "dark": "#D3D6DB",
                "light": "#F0F3F7",
                "main": "#EBEFF4",
              },
              "secondary": Object {
                "dark": "#E5B01F",
                "light": "#FFD45E",
                "main": "#FFC523",
              },
              "statusConfiguring": Object {
                "main": "#ffb25e",
              },
              "statusIdle": Object {
                "main": "#89c683",
              },
              "statusInactive": Object {
                "main": "#d3d6db",
              },
              "statusOffline": Object {
                "main": "#fd7c7c",
              },
              "statusPostProvisioning": Object {
                "main": "#aa96d5",
              },
              "statusUpdating": Object {
                "main": "#75C5F5",
              },
              "success": Object {
                "dark": "#1E4707",
                "light": "#EDF7E7",
                "main": "#4DB313",
                "semilight": "#A6D989",
              },
              "tertiary": Object {
                "dark": "#2F3033",
                "light": "#7E8085",
                "main": "#4D5057",
              },
              "text": Object {
                "dark": "#1c1d1e",
                "light": "#8f9297",
                "main": "#3c3e42",
              },
              "warning": Object {
                "dark": "#64410D",
                "light": "#FEF5E9",
                "main": "#FCA321",
                "semilight": "#FDD190",
              },
            },
            "font": "Roboto, Arial, sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
              64,
              72,
              96,
            ],
            "monospace": "'Ubuntu Mono', 'Courier New', monospace",
            "radius": 3,
            "space": Array [
              0,
              4,
              8,
              16,
              36,
              48,
              128,
            ],
            "weights": Array [
              400,
              700,
            ],
          }
        }
      >
        <div>
          DropDown
        </div>
      </button>
      <button
        className="sc-jKJlTe dkFSFP sc-VigVT hegYug sc-htoDjs fAvRR"
        onClick={[Function]}
        primary={true}
        theme={
          Object {
            "breakpoints": Array [
              32,
              48,
              64,
              80,
            ],
            "colors": Object {
              "danger": Object {
                "dark": "#661B1B",
                "light": "#FFECEC",
                "main": "#FF4444",
                "semilight": "#FFA1A1",
              },
              "gray": Object {
                "dark": "#9f9f9f",
                "light": "#f4f4f4",
                "main": "#c6c8c9",
              },
              "info": Object {
                "dark": "#0D3C58",
                "light": "#E9F4FB",
                "main": "#2297DE",
                "semilight": "#90CBEE",
              },
              "primary": Object {
                "dark": "#1E87C7",
                "light": "#5FB3E7",
                "main": "#2297DE",
              },
              "quartenary": Object {
                "dark": "#D3D6DB",
                "light": "#F0F3F7",
                "main": "#EBEFF4",
              },
              "secondary": Object {
                "dark": "#E5B01F",
                "light": "#FFD45E",
                "main": "#FFC523",
              },
              "statusConfiguring": Object {
                "main": "#ffb25e",
              },
              "statusIdle": Object {
                "main": "#89c683",
              },
              "statusInactive": Object {
                "main": "#d3d6db",
              },
              "statusOffline": Object {
                "main": "#fd7c7c",
              },
              "statusPostProvisioning": Object {
                "main": "#aa96d5",
              },
              "statusUpdating": Object {
                "main": "#75C5F5",
              },
              "success": Object {
                "dark": "#1E4707",
                "light": "#EDF7E7",
                "main": "#4DB313",
                "semilight": "#A6D989",
              },
              "tertiary": Object {
                "dark": "#2F3033",
                "light": "#7E8085",
                "main": "#4D5057",
              },
              "text": Object {
                "dark": "#1c1d1e",
                "light": "#8f9297",
                "main": "#3c3e42",
              },
              "warning": Object {
                "dark": "#64410D",
                "light": "#FEF5E9",
                "main": "#FCA321",
                "semilight": "#FDD190",
              },
            },
            "font": "Roboto, Arial, sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
              64,
              72,
              96,
            ],
            "monospace": "'Ubuntu Mono', 'Courier New', monospace",
            "radius": 3,
            "space": Array [
              0,
              4,
              8,
              16,
              36,
              48,
              128,
            ],
            "weights": Array [
              400,
              700,
            ],
          }
        }
      >
        <svg
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "color": undefined,
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 40 40"
          width="1em"
        >
          <g>
            <path
              d="m31.4 15.7q0 0.6-0.5 1l-10 10q-0.4 0.4-1 0.4t-1-0.4l-10-10q-0.4-0.4-0.4-1t0.4-1 1-0.4h20q0.6 0 1 0.4t0.5 1z"
            />
          </g>
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`Opened DropDownButton renders correctly 1`] = `
<div
  className="sc-bdVaJa jKopLr"
>
  <div
    className="sc-kEYyzF hUuPit"
  >
    <span>
      <button
        className="sc-eNQAEJ gDidKo sc-VigVT hegYug sc-htoDjs fAvRR"
        primary={true}
        theme={
          Object {
            "breakpoints": Array [
              32,
              48,
              64,
              80,
            ],
            "colors": Object {
              "danger": Object {
                "dark": "#661B1B",
                "light": "#FFECEC",
                "main": "#FF4444",
                "semilight": "#FFA1A1",
              },
              "gray": Object {
                "dark": "#9f9f9f",
                "light": "#f4f4f4",
                "main": "#c6c8c9",
              },
              "info": Object {
                "dark": "#0D3C58",
                "light": "#E9F4FB",
                "main": "#2297DE",
                "semilight": "#90CBEE",
              },
              "primary": Object {
                "dark": "#1E87C7",
                "light": "#5FB3E7",
                "main": "#2297DE",
              },
              "quartenary": Object {
                "dark": "#D3D6DB",
                "light": "#F0F3F7",
                "main": "#EBEFF4",
              },
              "secondary": Object {
                "dark": "#E5B01F",
                "light": "#FFD45E",
                "main": "#FFC523",
              },
              "statusConfiguring": Object {
                "main": "#ffb25e",
              },
              "statusIdle": Object {
                "main": "#89c683",
              },
              "statusInactive": Object {
                "main": "#d3d6db",
              },
              "statusOffline": Object {
                "main": "#fd7c7c",
              },
              "statusPostProvisioning": Object {
                "main": "#aa96d5",
              },
              "statusUpdating": Object {
                "main": "#75C5F5",
              },
              "success": Object {
                "dark": "#1E4707",
                "light": "#EDF7E7",
                "main": "#4DB313",
                "semilight": "#A6D989",
              },
              "tertiary": Object {
                "dark": "#2F3033",
                "light": "#7E8085",
                "main": "#4D5057",
              },
              "text": Object {
                "dark": "#1c1d1e",
                "light": "#8f9297",
                "main": "#3c3e42",
              },
              "warning": Object {
                "dark": "#64410D",
                "light": "#FEF5E9",
                "main": "#FCA321",
                "semilight": "#FDD190",
              },
            },
            "font": "Roboto, Arial, sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
              64,
              72,
              96,
            ],
            "monospace": "'Ubuntu Mono', 'Courier New', monospace",
            "radius": 3,
            "space": Array [
              0,
              4,
              8,
              16,
              36,
              48,
              128,
            ],
            "weights": Array [
              400,
              700,
            ],
          }
        }
      >
        <div>
          DropDown
        </div>
      </button>
      <button
        className="sc-jKJlTe dkFSFP sc-VigVT hegYug sc-htoDjs fAvRR"
        onClick={[Function]}
        primary={true}
        theme={
          Object {
            "breakpoints": Array [
              32,
              48,
              64,
              80,
            ],
            "colors": Object {
              "danger": Object {
                "dark": "#661B1B",
                "light": "#FFECEC",
                "main": "#FF4444",
                "semilight": "#FFA1A1",
              },
              "gray": Object {
                "dark": "#9f9f9f",
                "light": "#f4f4f4",
                "main": "#c6c8c9",
              },
              "info": Object {
                "dark": "#0D3C58",
                "light": "#E9F4FB",
                "main": "#2297DE",
                "semilight": "#90CBEE",
              },
              "primary": Object {
                "dark": "#1E87C7",
                "light": "#5FB3E7",
                "main": "#2297DE",
              },
              "quartenary": Object {
                "dark": "#D3D6DB",
                "light": "#F0F3F7",
                "main": "#EBEFF4",
              },
              "secondary": Object {
                "dark": "#E5B01F",
                "light": "#FFD45E",
                "main": "#FFC523",
              },
              "statusConfiguring": Object {
                "main": "#ffb25e",
              },
              "statusIdle": Object {
                "main": "#89c683",
              },
              "statusInactive": Object {
                "main": "#d3d6db",
              },
              "statusOffline": Object {
                "main": "#fd7c7c",
              },
              "statusPostProvisioning": Object {
                "main": "#aa96d5",
              },
              "statusUpdating": Object {
                "main": "#75C5F5",
              },
              "success": Object {
                "dark": "#1E4707",
                "light": "#EDF7E7",
                "main": "#4DB313",
                "semilight": "#A6D989",
              },
              "tertiary": Object {
                "dark": "#2F3033",
                "light": "#7E8085",
                "main": "#4D5057",
              },
              "text": Object {
                "dark": "#1c1d1e",
                "light": "#8f9297",
                "main": "#3c3e42",
              },
              "warning": Object {
                "dark": "#64410D",
                "light": "#FEF5E9",
                "main": "#FCA321",
                "semilight": "#FDD190",
              },
            },
            "font": "Roboto, Arial, sans-serif",
            "fontSizes": Array [
              12,
              14,
              16,
              20,
              24,
              32,
              48,
              64,
              72,
              96,
            ],
            "monospace": "'Ubuntu Mono', 'Courier New', monospace",
            "radius": 3,
            "space": Array [
              0,
              4,
              8,
              16,
              36,
              48,
              128,
            ],
            "weights": Array [
              400,
              700,
            ],
          }
        }
      >
        <svg
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "color": undefined,
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 40 40"
          width="1em"
        >
          <g>
            <path
              d="m31.4 27.1q0 0.6-0.5 1t-1 0.5h-20q-0.6 0-1-0.5t-0.4-1 0.4-1l10-10q0.4-0.4 1-0.4t1 0.4l10 10q0.5 0.5 0.5 1z"
            />
          </g>
        </svg>
      </button>
    </span>
    <div
      className="sc-kAzzGY dirfrO sc-cSHVUG flWEyE"
      onClick={[Function]}
    />
    <div
      className="sc-hMqMXs fzIFeV"
      onClick={[Function]}
    >
      <div
        className="sc-kkGfuU kqdaVq"
      >
        <div>
          Item
        </div>
      </div>
      <div
        className="sc-kkGfuU kqdaVq"
      >
        <div>
          Item
        </div>
      </div>
      <div
        className="sc-kkGfuU kqdaVq"
      >
        <div>
          Item
        </div>
      </div>
      <div
        className="sc-kkGfuU kqdaVq"
      >
        <div>
          Item
        </div>
      </div>
    </div>
  </div>
</div>
`;
